--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
   <main class="content">
     <section class="profile">
       <img class="profile__avatar" src="./images/kusto.jpg" alt="Кусто">
-      <div class="profile__info">
-        <h1 class="profile__title">Жак-Ив Кусто</h1>
-        <button class="profile__button"></button>
+      <div class="profile__text">
+        <div class="profile__info">
+          <h1 class="profile__title">Жак-Ив Кусто</h1>
+          <button class="profile__button"></button>
+        </div>
+        <p class="profile__subtitle">Исследователь океана</p>
       </div>
-      <p class="profile__subtitle">Исследователь океана</p>
-      <div class="profile__add-button"></div>
+      <div class="profile__add-button"></div>  
     </section>
 
     <section class="gallery">
