--- a/index.html
+++ b/index.html
@@ -75,6 +75,19 @@
     </section>
   </main>
 
+  <section class="popup">
+    <div class="popup__item">
+      <button class="popup__close"></button>
+    </div>
+    <div class="popup__container">   
+        <h3 class="popup__title">Редактировать профиль</h3>
+        <input type="text" placeholder="Жак-Ив Кусто" class="popup__text">
+        <input type="text" placeholder="Исследователь океана" class="popup__text">
+        <button class="popup__save">Сохранить</button>
+      
+    </div>
+  </section>
+
   <footer class="footer">
     <h2 class="footer__info">© 2022 Mesto Russia</h2>
   </footer>
