Теперь все по бэм

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </section>
   </main>
 
-  <template class="cards-template" id="temp">
+  <template class="cards_template" id="temp">
     <li class="cards__element">
       <img class="cards__image" src="#" alt="#">
       <button class="cards__delet" type="button"></button>
@@ -45,31 +45,31 @@
     </li>
   </template>
 
-  <section class="popup" id="popup">
+  <section class="popup popup_type_edit-profile" id="popup">
     <div class="popup__container">
       <button class="popup__close" type="button"></button>
       <form class="popup__form" name="form" id="form">   
           <h3 class="popup__title">Редактировать профиль</h3>
-          <input type="text" name="name" placeholder="Имя" class="popup__text text-name" id="name">
-          <input type="text" name="job" placeholder="Работа" class="popup__text text-job" id="job">
+          <input type="text" name="name" placeholder="Имя" class="popup__text popup__text_name" id="name">
+          <input type="text" name="job" placeholder="Работа" class="popup__text popup__text_job" id="job">
           <button class="popup__save" type="submit" >Сохранить</button>
       </form>
     </div>
   </section>
 
-  <section class="popup popup-place" id="add-place" aria-label="добовление картинок">
+  <section class="popup popup_place" id="add-place" aria-label="добовление картинок">
     <div class="popup__container">
       <button class="popup__close" type="button"></button>
-      <form class="popup__form cards-form" name="cards-form" id="cards-form">   
+      <form class="popup__form popup__form_cards" name="form_cards" id="form_cards">   
           <h3 class="popup__title">Новое место</h3>
-          <input type="text" name="place" placeholder="Название" class="popup__text text-place" id="place">
-          <input type="text" name="image" placeholder="Ссылка на картинку" class="popup__text text-image" id="image">
+          <input type="text" name="place" placeholder="Название" class="popup__text popup__text_place" id="place">
+          <input type="text" name="image" placeholder="Ссылка на картинку" class="popup__text popup__text_image" id="image">
           <button class="popup__save" type="submit" >Создать</button>
       </form>
     </div>
   </section>
 
-  <section class="popup popup-content" id="popup-image" aria-label="кратинки в попапе">
+  <section class="popup popup_type_full-image" id="popup-image" aria-label="кратинки в попапе">
     <div class="popup__container-image">
       <button class="popup__close" type="button"></button>
       <img class="popup__image" src="#" alt="#">
